--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "emf"
-version = "0.1.0"
-description = "Library for concurrent chemical fingerprints processing"
+name = "emf" #change this one
+version = "1.0.0"
+description = "Library for effective chemical fingerprints calculation"
 authors = ["Michal Szafarczyk <adammichal657@gmail.com>", "Piotr Ludynia",
     "Przemyslaw Kukla <przemek.kukla0703@gmail.com>"]
 license = "MIT"
@@ -10,19 +10,26 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pytest = "^7.3.1"
+numpy = "*"
+pandas = "*"
+scipy = "*"
+joblib = "*"
+rdkit = "*"
+scikit-learn = "*"  # No minimal version specified, will use the latest available
 torch = {version = "^2.0.1+cpu", source = "pytorch"}
 torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
-numpy = "^1.19.5"
-pandas = "^1.3.3"
-scipy = "^1.7.3"
-joblib = "^1.1.0"
 
+[tool.poetry.dev-dependencies]
+pytest = "^7.3.1"
 
 [[tool.poetry.source]]
 name = "pytorch"
 url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 79
@@ -41,6 +48,3 @@ exclude = '''
 )/
 '''
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
