--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,24 @@
 repos:
 -   repo: https://github.com/psf/black
-    rev: 23.3.0
+    rev: 23.11.0
     hooks:
     - id: black
-      language_version: python3.9
+      language_version: python3.10
 
+-   repo: https://github.com/PyCQA/isort
+    rev: 5.13.0
+    hooks:
+    - id: isort
+      args: ["--profile", "black"]
+      language_version: python3.10
+
+-   repo: https://github.com/yunojuno/pre-commit-xenon
+    rev: cc59b0431a5d072786b59430e9b342b2881064f6
+    hooks:
+    - id: xenon
+      args: ["--max-average=A", "--max-modules=C", "--max-absolute=C"]
+
+-   repo: https://github.com/PyCQA/bandit
+    rev: 1.7.6
+    hooks:
+      - id: bandit
