--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Library for effective molecular fingerprints calculation"
 authors = [
     "Jakub Adamczyk <jakub.adamczyk10@gmail.com>",
     "Przemyslaw Kukla <przemek.kukla0703@gmail.com>",
-    "Piotr Ludynia",
+    "Piotr Ludynia <piotrztych@gmail.com>",
     "Michal Szafarczyk <adammichal657@gmail.com>", 
 ]
 repository = "https://github.com/Arch4ngel21/scikit-fingerprints"
