--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,8 +26,10 @@ jobs:
         pip install
         poetry
         --user
-    - name: Configure poetry
+    - name: Configure poetry for PyPI
       run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
+    - name: Configure poetry for TestPyPI
+      run: poetry config pypi-token.testpypi ${{ secrets.TEST_PYPI_API_TOKEN }}
     - name: Build and publish to TestPyPI
       run: >-
         poetry build
@@ -37,4 +39,5 @@ jobs:
       run: >-
         poetry build
         && poetry publish
+
 
