--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -23,4 +23,4 @@ jobs:
       run: poetry install
 
     - name: Run tests with pytest
-      run: poetry run pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      run: poetry run pytest 
