--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -14,11 +14,12 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install Poetry
+    - name: Install Poetry and other dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry
         pip install pytest
+        pip install ogb
 
     - name: Install dependencies using Poetry
       run: poetry install
