--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -19,11 +19,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
         pip install pytest
-        pip install ogb
 
     - name: Install dependencies using Poetry
-      run: poetry install
-
+      run: |
+        poetry add ogb
+        poetry install
     - name: Run tests with pytest
       run: poetry run pytest tests/fingerprints_tests.py
 
