--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [tool.poetry]
 name = "scikit-fingerprints"
-version = "1.1.1"
+version = "1.1.2"
 description = "Library for effective molecular fingerprints calculation"
 authors = [
+    "Scikit-Fingerprints Development Team <scikitfingerprints@gmail.com>",
     "Jakub Adamczyk <jakub.adamczyk10@gmail.com>",
     "Przemyslaw Kukla <przemek.kukla0703@gmail.com>",
     "Piotr Ludynia <piotrztych@gmail.com>",
