--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     rev: 5.13.0
     hooks:
     - id: isort
-      args: ["--profile", "black"]
+      args: ["--profile", "black", "--filter-files"]
       language_version: python3.10
 
 -   repo: https://github.com/yunojuno/pre-commit-xenon
