--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -2,6 +2,9 @@ name: Python package workflow
 
 on: [push, pull_request]
 
+env:
+  POETRY_VENV: poetry_venv
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -14,16 +17,15 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install Poetry and other dependencies
+    - name: Install Poetry
       run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        pip install pytest
+        python3 -m venv $POETRY_VENV
+        $POETRY_VENV/bin/pip install -U pip setuptools
+        $POETRY_VENV/bin/pip install poetry
 
     - name: Install dependencies using Poetry
-      run: |
-        poetry add ogb
-        poetry install
+      run: poetry install --with test
+
     - name: Run tests with pytest
       run: poetry run pytest tests/fingerprints_tests.py
 
