--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,7 +8,12 @@
 
 name: Publish Python distributions to PyPI and TestPyPI
 
-on: push
+on:
+  pull_request:
+    types:
+      - closed
+    branches:
+      - 'release/**'
 
 jobs:
   build-n-publish:
