--- a/.github/workflows/python-test-light.yml
+++ b/.github/workflows/python-test-light.yml
@@ -1,9 +1,10 @@
-name: Python package workflow
+name: Python light tests
 
 on: [push]
 
 env:
   POETRY_VENV: poetry_venv
+  POETRY: poetry_venv/bin/poetry
 
 jobs:
   test:
@@ -24,8 +25,8 @@ jobs:
         $POETRY_VENV/bin/pip install poetry
 
     - name: Install dependencies using Poetry
-      run: poetry install --with test
+      run: $POETRY install --with test
 
     - name: Run light tests with pytest
-      run: poetry run pytest tests/fingerprints_tests_light.py
+      run: $POETRY run pytest tests/fingerprints_tests_light.py
 
