Only code changes should trigger light tests

--- a/.github/workflows/python-test-light.yml
+++ b/.github/workflows/python-test-light.yml
@@ -1,6 +1,11 @@
 name: Python light tests
 
-on: [push]
+on:
+  push:
+    paths:
+      - ".github/**"
+      - "skfp/**"
+      - "tests/**"
 
 env:
   POETRY_VENV: poetry_venv
