--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ e3fp = "*"
 joblib = "*"
 numpy = "^1.20.0"
 pandas = "*"
+pytest = "^8.1.1"
 rdkit = "*"
 scikit-learn = "*"
 scipy = "*"
@@ -37,7 +38,6 @@ optional = true
 black = "*"
 flake8 = "*"
 isort = "*"
-mypy = "*"
 pre-commit = "*"
 pytest = "*"
 
@@ -47,24 +47,9 @@ optional = true
 [tool.poetry.group.test.dependencies]
 pytest = "*"
 
+[tool.pytest.ini_options]
+python_files = "*.py"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 79
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
-
