--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
--   repo: https://github.com/PyCQA/bandit
+  - repo: https://github.com/PyCQA/bandit
     rev: 1.7.8
     hooks:
       - id: bandit
@@ -9,33 +9,33 @@ repos:
           - -s
           - B101
 
--   repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black
     rev: 24.3.0
     hooks:
-    - id: black
-      language_version: python3.11
+      - id: black
+        language_version: python3.11
 
--   repo: https://github.com/PyCQA/flake8
+  - repo: https://github.com/PyCQA/flake8
     rev: 7.0.0
     hooks:
-    -   id: flake8
+      - id: flake8
         # TODO: refactor this directory and then enable
         exclude: ^benchmarking
 
--   repo: https://github.com/PyCQA/isort
+  - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
     hooks:
-    - id: isort
-      args: ["--profile", "black", "--filter-files"]
-      language_version: python3.11
+      - id: isort
+        args: [ "--profile", "black", "--filter-files" ]
+        language_version: python3.11
 
--   repo: https://github.com/yunojuno/pre-commit-xenon
-    rev: v0.1
-    hooks:
-    - id: xenon
-      args: ["--max-average=A", "--max-modules=C", "--max-absolute=C"]
-
--   repo: https://github.com/asottile/pyupgrade
+  - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.1
     hooks:
-    -   id: pyupgrade
+      - id: pyupgrade
+
+  - repo: https://github.com/yunojuno/pre-commit-xenon
+    rev: v0.1
+    hooks:
+      - id: xenon
+        args: [ "--max-average=A", "--max-modules=A", "--max-absolute=B" ]
