--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ black = "*"
 flake8 = "*"
 isort = "*"
 pre-commit = "*"
+pyright = "*"
 pytest = "*"
 
 [tool.poetry.group.test]
@@ -48,6 +49,10 @@ pytest = "*"
 
 [tool.pytest.ini_options]
 python_files = "*.py"
+
+[tool.pyright]
+include = ["skfp", "tests"]
+pythonVersion = "3.9"  # minimal Python version to support
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
