--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,8 @@ optional = true
 black = "*"
 flake8 = "*"
 isort = "*"
+mypy = "*"
 pre-commit = "*"
-pyright = "*"
 pytest = "*"
 
 [tool.poetry.group.test]
@@ -49,10 +49,6 @@ pytest = "*"
 
 [tool.pytest.ini_options]
 python_files = "*.py"
-
-[tool.pyright]
-include = ["skfp", "tests"]
-pythonVersion = "3.9"  # minimal Python version to support
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
