--- a/mypy.ini
+++ b/mypy.ini
@@ -3,11 +3,8 @@
 python_version = 3.9
 
 # allow redefining variable types, we do that a lot for efficiency
-allow_redefinition = True
+allow_redefinition = true
 
 # unfortunately, most libraries that we use are not properly typed
 # in particular, RDKit is unlikely to ever have proper Python typing stubs
 disable_error_code = import-untyped
-
-# TODO: change when we refactor this directory
-exclude = benchmarking
