Finish PubChem fingerprint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
       # and have all dependencies
       - id: mypy
         name: mypy
-        entry: bash -c 'poetry run mypy --package skfp --package tests'
+        entry: bash -c 'poetry run mypy --allow-redefinition --package skfp --package tests'
         language: system
         pass_filenames: false
 
