--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,12 @@ optional = true
 [tool.poetry.group.test.dependencies]
 pytest = "*"
 
+[tool.poetry.group.doc]
+optional = true
+
+[tool.poetry.group.doc.dependencies]
+sphinx = "*"
+
 [tool.pytest.ini_options]
 python_files = "*.py"
 
