--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -5,6 +5,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: [ "master" ]
+    paths:
+      - 'docs/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -52,7 +54,7 @@ jobs:
         run: $POETRY install --with doc
 
       - name: Build documentation
-        run: $POETRY run make -C doc html
+        run: $POETRY run make -C docs html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -61,7 +63,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload only the HTML documentation
-          path: './doc/_build/html'
+          path: './docs/_build/html'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
