--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -31,7 +31,9 @@ jobs:
       run: $POETRY self add poetry-plugin-sort
 
     - name: Check pre-commit
-      run: $POETRY run pre-commit run --all-files
+      run: |
+        export PATH=$POETRY_VENV/bin:$PATH
+        $POETRY run pre-commit run --all-files
 
     - name: Run tests with pytest
       run: $POETRY run pytest tests
