add checking pre-commit in action (#103)
* add checking pre-commit in action

* remove language version for test

* install poetry plugin in action

* added mypy to test

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -27,6 +27,14 @@ jobs:
     - name: Install dependencies using Poetry
       run: $POETRY install --with test
 
+    - name: Install poetry plugins
+      run: $POETRY self add poetry-plugin-sort
+
+    - name: Check pre-commit
+      run: |
+        export PATH=$POETRY_VENV/bin:$PATH
+        $POETRY run pre-commit run --all-files
+
     - name: Run tests with pytest
       run: $POETRY run pytest tests
 
