--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,8 @@ pytest = "*"
 optional = true
 
 [tool.poetry.group.test.dependencies]
+mypy = "*"
+pre-commit = "*"
 pytest = "*"
 
 [tool.poetry.group.doc]
