Simplify pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
       # and have all dependencies
       - id: mypy
         name: mypy
-        entry: poetry run mypy --allow-redefinition --package skfp --package tests
+        entry: poetry run mypy --package skfp --package tests
         language: system
         pass_filenames: false
 
