--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -35,11 +35,10 @@ jobs:
         run: poetry install --with test
 
       - name: Install poetry plugins
-        run: $POETRY self add poetry-plugin-sort
+        run: poetry self add poetry-plugin-sort
 
       - name: Check pre-commit
-        run: |
-          $POETRY run pre-commit run --all-files
+        run: poetry run pre-commit run --all-files
 
       - name: Run tests with pytest
-        run: $POETRY run pytest tests
+        run: poetry run pytest tests
