--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -1,35 +1,26 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: [ "master" ]
     paths:
       - 'docs/**'
 
-  # Allows you to run this workflow manually from the Actions tab
+  # allow running manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# allow only one concurrent deployment, but do NOT cancel in-progress runs,
+# as we want to allow these production deployments to complete
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
-env:
-  POETRY_VENV: poetry_venv
-  POETRY: poetry_venv/bin/poetry
-
-
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -42,19 +33,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: 3.9
 
       - name: Install Poetry
-        run: |
-          python3 -m venv $POETRY_VENV
-          $POETRY_VENV/bin/pip install -U pip setuptools
-          $POETRY_VENV/bin/pip install poetry
+        uses: abatilo/actions-poetry@v2
 
-      - name: Install dependencies using Poetry
-        run: $POETRY install --with doc
+      - name: Install the project dependencies
+        run: poetry install --with doc
 
       - name: Build documentation
-        run: $POETRY run make -C docs html
+        run: poetry run make -C docs html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -62,8 +50,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload only the HTML documentation
           path: './docs/_build/html'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
