--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -2,10 +2,15 @@ name: Tests & checks
 
 on: [pull_request]
 
+# cancel previous runs on a new commit
+concurrency:
+  group: ${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   ci:
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [macos-latest, ubuntu-latest, windows-latest]
@@ -17,7 +22,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install poetry
+      - name: Install Poetry
         uses: abatilo/actions-poetry@v2
 
       - name: Setup a local virtual environment
