Update Poetry action to V3

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,8 +17,8 @@ jobs:
       with:
         python-version: 3.9
 
-    - name: Install poetry
-      uses: abatilo/actions-poetry@v2
+    - name: Install Poetry
+      uses: abatilo/actions-poetry@v3
 
     - name: Configure Poetry for TestPyPI
       run: >-
