Add Atom Pair docs and fixes (#117)
* Add Atom Pair docs and fixes

* Make docs nicer

* A few fixes to docs

--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -42,7 +42,7 @@ jobs:
         run: poetry install --with doc
 
       - name: Build documentation
-        run: poetry run make -C docs html
+        run: poetry run make docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
