--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,4 +54,4 @@ repos:
     rev: v0.1
     hooks:
       - id: xenon
-        args: [ "--max-average=A", "--max-modules=A", "--max-absolute=C" ]
+        args: [ "--max-average=A", "--max-modules=B", "--max-absolute=C" ]
