--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,9 +46,10 @@ repos:
         pass_filenames: false
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.1
+    rev: v3.15.2
     hooks:
       - id: pyupgrade
+        args: [ "--py39-plus" ]
 
   - repo: https://github.com/yunojuno/pre-commit-xenon
     rev: v0.1
