Add tests coverage and more tests (#124)
* Add test coverage command

* Add tests for wrong parameter combinations

* Add FingerprintTransformer tests

* Add more tests

* Update poetry.lock

* Fix PubChem fingerprint

* Modify HAC scaling

* Fix Atom Pair tests

* Add more dtype tests

* pyupgrade changes

* Add further dtype tests

* Add further tests

* Remove wrong assert

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,12 +46,13 @@ repos:
         pass_filenames: false
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.1
+    rev: v3.15.2
     hooks:
       - id: pyupgrade
+        args: [ "--py39-plus" ]
 
   - repo: https://github.com/yunojuno/pre-commit-xenon
     rev: v0.1
     hooks:
       - id: xenon
-        args: [ "--max-average=A", "--max-modules=A", "--max-absolute=C" ]
+        args: [ "--max-average=B", "--max-modules=B", "--max-absolute=C" ]
