Modify action so documentation is published on action change or changed docstrings

--- a/.github/workflows/build-and-publish-docs.yml
+++ b/.github/workflows/build-and-publish-docs.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "master" ]
     paths:
       - 'docs/**'
+      - 'skfp/**'
+      - '.github/workflows/build-and-publish-docs.yml'
 
   # allow running manually from the Actions tab
   workflow_dispatch:
