--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -19,6 +19,9 @@ jobs:
         exclude:
           - python-version: "3.9"
             os: macos-latest
+        include:
+          - python-version: "3.9"
+            os: macos-13
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
